[package]
name = "vimage"
version = "0.1.3"
edition = "2024"
description = "Simple, dependency-free CLI to open images in the default browser. The images are updated at a given interval, so that the user can edit the images while keeping track of their changes."
license = "MIT"
repository = "https://github.com/emil-aagaard/vimage"
readme = "README.md"
keywords = ["cli", "image", "viewer"]

[dependencies]
